--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "start.js",
   "dependencies": {
-		"chip-io": "2.1.1",
-		"johnny-five": "0.10.6",
-		"moment": "2.17.1",
+    "chip-io": "2.1.1",
+    "johnny-five": "0.10.6",
+    "moment": "2.17.1",
+    "moment-timezone": "^0.5.11",
     "request": "2.80.0"
   },
   "devDependencies": {},
